--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,30 @@
-dnspython
-fastapi
-gunicorn
-pymongo[srv]
-pydantic[email]
-python-dotenv
-python-multipart
-uvicorn[standard]
+annotated-types==0.6.0
+anyio==3.7.1
+certifi==2023.11.17
+click==8.1.7
+distro==1.8.0
+dnspython==2.4.2
+email-validator==2.1.0.post1
+fastapi==0.104.1
+gunicorn==21.2.0
+h11==0.14.0
+httpcore==1.0.2
+httptools==0.6.1
+httpx==0.25.2
+idna==3.6
+openai==1.3.6
+packaging==23.2
+pydantic==2.5.2
+pydantic_core==2.14.5
+pymongo==4.6.1
+python-dotenv==1.0.0
+python-multipart==0.0.6
+PyYAML==6.0.1
+sniffio==1.3.0
+starlette==0.27.0
+tqdm==4.66.1
+typing_extensions==4.8.0
+uvicorn==0.24.0.post1
+uvloop==0.19.0
+watchfiles==0.21.0
+websockets==12.0
